Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.CS

            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdSkipWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_CmdSkipWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdStepRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_CmdStepRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdStepWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_CmdStepWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ErrorCtrl@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ErrorCtrl(UInt32 ctrlval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ErrorDefine@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ErrorDefine(UInt32 defineval, UInt16 errvalue, Int32 countval, UInt16 wordpos, UInt16 bitpos, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ErrorSent@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ErrorSent(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ErrorTagBC@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ErrorTagBC(Int32 tagval, UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ErrorTagRT@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ErrorTagRT(Int32 tagval, Int32 mcflag, Int32 rtlink, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ErrorTriggerDefine@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ErrorTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ListBlockRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_ListBlockRd(UInt16[] buf, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ListBlockWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_ListBlockWr(UInt16[] buf, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ListDataRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ListDataRd(UInt16[] buf, Int32 count, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ListDataWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ListDataWr(UInt16[] buf, Int32 count, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ListMultiBlockRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ListMultiBlockRd(UInt16[] buf, ref Int32 blkcountptr, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ListMultiBlockWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ListMultiBlockWr(UInt16[] buf, Int32 blkcount, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MonConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MonConfig(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MonFilterRTLink@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MonFilterRTLink(UInt32 rtlinkmask, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MonFilterSA@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MonFilterSA(Int32 rtlink, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgBlockRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgBlockRd(ref MSGFIELDSEBR buf, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgBlockWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgBlockWr(ref MSGFIELDSEBR buf, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgDataRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgDataRd(UInt16[] buf, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgDataWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgDataWr(UInt16[] buf, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgFieldRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgFieldRd(UInt16 fieldtype, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgFieldWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgFieldWr(UInt32 fieldval, UInt16 fieldtype, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgGroupRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgGroupRd(Int32 nummsgs, [In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 0)] MSGFIELDSEBR[] msgflds, UInt32[] msgaddrptr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgGroupWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgGroupWr(Int32 nummsgs, [In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 0)] MSGFIELDSEBR[] msgflds, UInt32[] msgaddrptr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgSkipRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MsgSkipRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgSkipWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgSkipWr(Int32 skip, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgSyncDefine@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MsgSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgTriggerDefine@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MsgTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_PlayConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_PlayConfig(UInt32 configval, UInt32 rtlinkmask, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_PlayStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_PlayStatus(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_PlayWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_PlayWr(UInt16[] buf, UInt16 bufcount, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTConfig(UInt32 configval, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTCreateList@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_RTCreateList(UInt32 listconfigval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 rtlink, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTCreateMsg@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_RTCreateMsg(UInt32 configval, Int32 mcflag, Int32 rtlink, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTGetMsg@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_RTGetMsg(Int32 mcflag, Int32 rtlink, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTReset@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTReset(Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTResponseTimeSet@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTResponseTimeSet(Int32 resptime, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTSetMode@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTSetMode(UInt32 configval, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTSWDRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_RTSWDRd(Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTSWDWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTSWDWr(UInt16 swdval, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTSyncDefine@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, Int32 rtlink, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, Int32 channum, IntPtr handleval);
